redis/redis-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels:
    name: redis
spec:
  containers:
  - name: redis
    image: redis:latest
    ports:
    - containerPort: 6379
    volumeMounts:
    - mountPath: /data
      name: redis-storage
  volumes:
  - name: redis-storage
    persistentVolumeClaim:
      claimName: redis-pvc
