redis/clusterip-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-clusterip
  namespace: avalara-tests
spec:
  selector:
    name: redis
  ports:
  - port: 2409
    targetPort: 6379
    protocol: TCP
