redis/ingress-redis.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-ingress
  namespace: avalara-tests
spec:
  ingressClassName: nginx
  rules:
  - host: avalara.redis.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: redis-clusterip
            port:
              number: 2409
